# Learn_Rocket

./: .gitignore  README.md  bootstrap_external.cmd  clean_result.cmd  pyproject.toml  start.cmd  stop.cmd
.external/BalloonPoppingChallenge/: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.external/BalloonPoppingChallenge/ActiveRocketPy/: README.md  pyproject.toml
.external/BalloonPoppingChallenge/ActiveRocketPy/docs/examples/: halcyon_flight_sim_roll_throttle.ipynb
.external/BalloonPoppingChallenge/ActiveRocketPy/rocketpy/prints/: roll_control_prints.py
.external/BalloonPoppingChallenge/ActiveRocketPy/rocketpy/rocket/: tvc.py
.external/BalloonPoppingChallenge/ActiveRocketPy/rocketpy/simulation/: flight.py
.external/BalloonPoppingChallenge/ActiveRocketPy/rocketpy/stochastic/: stochastic_aero_surfaces.py  stochastic_flight.py  stochastic_rocket.py
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/: __init__.py
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/agents/: base_agent.py  example_agents.py
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/envs/: __init__.py  balloon_world.py
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/envs/data/: README.md
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/evaluation/: __init__.py  evaluate.py
.external/BalloonPoppingChallenge/BalloonPoppingGymEnv/evaluation/configs/: example_eval_cfg.yaml
.external/BalloonPoppingChallenge/doc/examples/: evaluate_scenario_colab.ipynb  run_env_agent.py  test_navigation_agent.py
(+106 files in other folders)
